# underwood

./: .gitignore  README.md  pyproject.toml  requirements-lock.txt  requirements.txt
src/underwood/: Config.py  Feed.py  HTMLDocument.py  HTMLTemplate.py  blog.py  config.py  feed.py  file.py  main.py  page.py  schema.py  section.py  utils.py
tests/: test_underwood.py
tests/data/: test.json
